--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <div class="area-image">
-            <img src="images/illustration-hero.svg" alt="illustration-hero">
+            <img src="illustration-hero.svg" alt="illustration-hero">
         </div>
 
         <div class="title">
